--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assignment-one</title>
+  <!-- google font link start -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans:wght@400;700&display=swap"
+    rel="stylesheet">
+    <!-- google font link end -->
   <link rel="stylesheet" href="styles/assignment-one.css">
 </head>
 <body>
+  <header></header>
+  <!-- section one start -->
+  <section class="section-items">
+    <div class="item">
+      <h2 class="item-title">All Think Are<br> Possible If You<br> believe</h2>
+      <p class="item-details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ea ab     magni<br> perspiciatis repellendus voluptate
+       expedita, cumque commodi<br> quam nostrum? Et explicabo eius rerum sint!</p>
+      <button class="btn-primary">Contact Us</button>
+    </div>
+  </section>
+  <!-- section one end -->
   
 </body>
 </html>
