section two added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans:wght@400;700&display=swap"
     rel="stylesheet">
-    <!-- google font link end -->
+    <!--  end -->
+    <!-- font asesome link start -->
+    <script src="https://kit.fontawesome.com/c23eaa5505.js" crossorigin="anonymous"></script>
+    <!-- end -->
   <link rel="stylesheet" href="styles/assignment-one.css">
 </head>
 <body>
@@ -25,6 +28,25 @@
     </div>
   </section>
   <!-- section one end -->
+
+  <!-- section two start -->
+  <section class="section-two">
+    <div class="left">
+      <img src="images/person.png" alt="">
+    </div>
+    <div class="right">
+      <h3 class="right-title">My failures of previous year</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas a, ipsa debitis similique reprehenderit porro. Molestiae doloribus odio mollitia, et id impedit dolor quisquam excepturi animi numquam consectetur aliquid ea.</p>
+      <p>
+        <img src="" alt="">
+        <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
+       
+      </p>
+     
+    </div>
+
+  </section>
+
   
 </body>
 </html>
