--- a/index.html
+++ b/index.html
@@ -35,12 +35,35 @@
       <img src="images/person.png" alt="">
     </div>
     <div class="right">
-      <h3 class="right-title">My failures of previous year</h3>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas a, ipsa debitis similique reprehenderit porro. Molestiae doloribus odio mollitia, et id impedit dolor quisquam excepturi animi numquam consectetur aliquid ea.</p>
-      <p>
+      <h3 class="right-title">My failures of <br>previous year</h3>
+      <p class="right-title-details">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas a, ipsa debitis similique reprehenderit porro. Molestiae doloribus odio mollitia, et id impedit dolor quisquam excepturi animi numquam consectetur aliquid ea.</p>
+      <p class="icon">
         <img src="" alt="">
         <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
-       
+      </p>
+      <p  class="icon">
+        <img src="" alt="">
+        <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
+      </p>
+      <p  class="icon">
+        <img src="" alt="">
+        <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
+      </p>
+      <p  class="icon">
+        <img src="" alt="">
+        <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
+      </p>
+      <p  class="icon">
+        <img src="" alt="">
+        <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
+      </p>
+      <p  class="icon">
+        <img src="" alt="">
+        <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
+      </p>
+      <p  class="icon">
+        <img src="" alt="">
+        <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
       </p>
      
     </div>
