--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="right">
       <h3 class="right-title">My failures of <br>previous year</h3>
-      <p class="right-title-details">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas a, ipsa debitis similique reprehenderit porro. Molestiae doloribus odio mollitia, et id impedit dolor quisquam excepturi animi numquam consectetur aliquid ea.</p>
+      <p class="right-title-details">Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Voluptas a, ipsa debitis similique reprehenderit porro. <br>Molestiae doloribus odio mollitia, et id impedit dolor quisquam <br>excepturi animi numquam consectetur aliquid ea.</p>
       <p class="icon">
         <img src="" alt="">
         <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
@@ -61,15 +61,51 @@
         <img src="" alt="">
         <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
       </p>
-      <p  class="icon">
-        <img src="" alt="">
-        <i class="fa-light fa-check">Contrary to popular belief, is not simple.</i>
-      </p>
-     
+      
     </div>
-
   </section>
-
+  <!-- section two end -->
+  <!-- section three start -->
+  <section class="section-three">
+    <h3 class="section-three-title">My Plans</h3>
+    <div class="parent-div">
+      <div class="child-div">
+        <img src="images/icons/web.png">
+        <h4>Web development</h4>
+        <p>I want to start</p>
+      </div>
+   
+      <div class="child-div">
+        <img src="images/icons/web.png">
+        <h4>Web development</h4>
+        <p>I want to start</p>
+      </div>
+   
+      <div class="child-div">
+        <img src="images/icons/web.png">
+        <h4>Web development</h4>
+        <p>I want to start</p>
+      </div>
+   
+      <div class="child-div">
+        <img src="images/icons/web.png">
+        <h4>Web development</h4>
+        <p>I want to start</p>
+      </div>
+   
+      <div class="child-div">
+        <img src="images/icons/web.png">
+        <h4>Web development</h4>
+        <p>I want to start</p>
+      </div>
+   
+    </div>
+   <div class="linear-gradient">
+    <h3 class="lg-title">Awlays keep a positive <br> mindset</h3>
+    <button class="lg-button">Call Now</button>
+   </div>
+  </section>
+  
   
 </body>
 </html>
