--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
     <div class="contact-from">
       <h3 class="contact-sub-title-one">Subscribe</h3>
       <form>
-        <input type="email" name="email" id="email" placeholder="Enter Your Email"><br>
+        <p class="add-padding">
+          <input type="email" name="email" id="email" placeholder="Enter Your Email">
+        </p>
+        
         <button class="contact-button">Subscribe</button>
 
       </form>
