fixed header class

--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
   <link rel="stylesheet" href="styles/assignment-one.css">
 </head>
 <body>
-  <!-- 
-  <header>Not requisite </header>
- -->
-  
-  <main>
-    <!-- section one start -->
-    <section class="section-items">
+  <header class="header-items">
       <div class="item">
         <h2 class="item-title">All Think Are<br> Possible If You<br> believe</h2>
         <p class="item-details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ea ab magni<br>
@@ -31,9 +25,11 @@
           expedita, cumque commodi<br> quam nostrum? Et explicabo eius rerum sint!</p>
         <button class="btn-primary">Contact Us</button>
       </div>
-    </section>
-    <!-- section one end -->
-    
+  </header>
+
+  
+  <main>
+   
     <!-- section two start -->
     <section class="section-two">
       <div class="left">
