new section complete

--- a/index.html
+++ b/index.html
@@ -104,6 +104,28 @@
         <button class="lg-button">Call Now</button>
       </div>
     </section>
+    <section class="blog">
+    <div class="blog-item">
+     <h2>HTML</h2>
+      <h4 class="">what is html?</h4>
+      <p class="">The HyperText Markup Language or HTML is the standard <br>markup language for documents designed <br>to be displayed in a web
+      browser. </p>
+    </div>
+    <div class="blog-item">
+     <h2>HTML</h2>
+      <h4 class="">what is html?</h4>
+      <p class="">The HyperText Markup Language or HTML is the standard <br>markup language for documents designed <br>to be displayed in a web
+      browser. </p>
+    </div>
+    <div class="blog-item">
+     <h2>HTML</h2>
+      <h4 class="">what is html?</h4>
+      <p class="">The HyperText Markup Language or HTML is the standard <br>markup language for documents designed <br>to be displayed in a web
+      browser. </p>
+    </div>
+    
+
+    </section>
   </main> 
   <footer>
   <section class="contact">
