--- a/index.html
+++ b/index.html
@@ -26,12 +26,9 @@
         <button class="btn-primary">Contact Us</button>
       </div>
   </header>
-
-  
   <main>
-   
-    <!-- section two start -->
-    <section class="section-two">
+    <!-- section one start -->
+    <section class="section-one">
       <div class="left">
         <img src="images/person.png" alt="">
       </div>
@@ -67,10 +64,10 @@
     
       </div>
     </section>
-    <!-- section two end -->
-    <!-- section three start -->
-    <section class="section-three">
-      <h3 class="section-three-title">My Plans</h3>
+    <!-- section one end -->
+    <!-- section two start -->
+    <section class="section-two">
+      <h3 class="section-two-title">My Plans</h3>
       <div class="parent-div">
         <div class="child-div">
           <img src="images/icons/web.png">
@@ -104,6 +101,8 @@
         <button class="lg-button">Call Now</button>
       </div>
     </section>
+    <!-- section two end -->
+    <!-- blog section  start-->
     <section class="blog">
     <div class="blog-item">
      <h2>HTML</h2>
@@ -123,9 +122,8 @@
       <p class="">The HyperText Markup Language or HTML is the standard <br>markup language for documents designed <br>to be displayed in a web
       browser. </p>
     </div>
-    
-
     </section>
+    <!-- blog section end -->
   </main> 
   <footer>
   <section class="contact">
